style.css
/* set color variables for entire page */

:root {
    --primary-color: #AAD6DA;
    --secondary-color: #517496;
    --text-color: #223251;
    --contrast-color: #C64C4A;

}

/* remove default styling */
* {
    margin: 0;
    padding: 0;

}
html {
    height: 100%;
}

/* make body a vertical flexbox */

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
    font-family: 'Source Sans Pro', sans-serif;
}

/* begin header styling */

header {
    display: flex;
    height: 1.5em;
    color: white;
    font-size: 24px;
    background: var(--secondary-color);
    padding: .5em 2em;
    font-family: Lobster;
}

header p {
    font-weight: 900;
}

.logo {
    font-family: Lobster;
}

/* end header styling */

/* begin main styling */

main {
    flex: 1 1 auto;
    display: flex;
    background-color: var(--primary-color);
    padding: 2em 4em;
    justify-content: space-around;
}

/* begin styling for controls (left side) */

.controls {
    flex: 0 0 auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: var(--font-color);
    gap: 2em;
}

/*remove default input styling */

.color-selection {
    display: flex;
    width: 100%;
    gap: 1em;
    justify-content: center;
    align-items: center;
}

#color-display {
    outline: none;
    height: 2.25em;
    width: 2em;
    border: none;
    background: none;
    justify-self: flex-end;
    align-self: flex-end;
    margin-bottom: .25em;
    cursor: pointer;
}

.single-color, .rainbow {
    width: 8.5em;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: white;
    padding: .5em 1em;
    border-radius: 1em;
    font-size: 18px;
    border: 2px solid var(--text-color);
    font-weight: bold;
    color: var(--text-color);
    cursor: pointer;
}

/* styling for single color button active */

.rainbow-clicked {
    background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, purple);
    color: white;
    text-shadow: -1px -1px 0px black, 1px -1px black, -1px 1px black, 1px 1px black;
}

.single-color-clicked {
    background-color: var(--text-color);
    color: white;
}

/* end styling for color selection */

/* begin sizing for density selection */

.density {
    display: flex;
    width: 70%;
    flex-direction: column;
    justify-content: center;
    gap: .5em;
}

.density-title{
    align-self: center;
    font-size: 24px;
    font-weight: bold;
    color: var(--text-color);
}

.slider {
    -webkit-appearance: none;
    width: 100%;
    height: 10px;
    border-radius: 5px;  
    background: white;
    border: 2px solid var(--text-color);
    outline: none;
    opacity: 1;
    -webkit-transition: .2s;
    transition: opacity .2s;
  }

  .slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 25px;
    height: 25px;
    border-radius: 50%; 
    background: var(--text-color);
    cursor: pointer;
  }
  
  .slider::-moz-range-thumb {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    background: var(--text-color);
    cursor: pointer;
  }

  #size-display-container {
      align-self: center;
      font-size: 18px;
  }

  /* end styling for density selection */

  /* end controls styling */

.frame {
    width: 600px;
    height: 600px;
    flex: 0 0 auto;
    display: flex;
    flex-direction: column;
    background-color: var(--contrast-color);
    margin: 3em;
    border-radius: 3em;
    padding: 0em 3em 0em 3em;
    box-shadow: 5px 5px 5px rgba(0,0,0,.4);
}

.etch-a-sketch {
    font-size: 18px;
    padding: .25em 0em;
    font-size: 28px;
    margin: 0;
    align-self: center;
    margin-block-start: 0em;
    margin-block-end: 0em;
    font-family: Lobster;
    color: white;
    text-shadow: -1px -1px 0px #941519, 1px -1px #941519, -1px 1px #941519, 1px 1px #941519;
}

.erase {
    background-color: white;
    height: 3em;
    width: 3em;
    align-self: center;
    border-radius: 100%;
    justify-self: flex-end;
    margin: .5em; 
    box-shadow: -2px -2px 1px #941519, 2px -2px 1px #941519, -2px 2px 1px #941519, 2px 2px 1px #941519;
    cursor: pointer;
}

.sketch-container {
    flex: 1;
    display: grid;
    background-color: white;
    box-shadow: inset 2px 2px 5px rgba(0,0,0,.6), inset -2px 2px 5px rgba(0,0,0,.6), inset 2px -2px 5px rgba(0,0,0,.6), inset -2px -2px 5px rgba(0,0,0,.6);*/
}

/* end main styling */

/* begin footer styling */

footer {
    padding: 0;
    padding: .5em;
    background-color: palegreen;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: Lobster, sans-serif;
    font-size: 24px;
    background: var(--secondary-color);
    color: white;
}

/* end footer styling */

.button:active {
    transform: translateY(2px);
}

